k8s/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\infrustructure_progs\k8s\kompose.exe convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: db
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: db
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\infrustructure_progs\k8s\kompose.exe convert
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/quiz-project-default: "true"
        io.kompose.service: db
    spec:
      containers:
        - image: mikhailkh/quiz-db:latest
          name: quiz-db
          ports:
            - containerPort: 5432
          resources: {}
      restartPolicy: Always
status: {}
