k8s/quiz-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\infrustructure_progs\k8s\kompose.exe convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: quiz-app
    kompose.service.type: LoadBalancer
  name: quiz-app
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: quiz-app
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\infrustructure_progs\k8s\kompose.exe convert
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/quiz-project-default: "true"
        io.kompose.service: quiz-app
    spec:
      containers:
        - image: mikhailkh/spring-boot-quiz:latest
          name: quiz-app
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always
status: {}
