k8s/maildev-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\infrustructure_progs\k8s\kompose.exe convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: maildev
  name: maildev
spec:
  ports:
    - name: "1080"
      port: 1080
      targetPort: 1080
    - name: "1025"
      port: 1025
      targetPort: 1025
  selector:
    io.kompose.service: maildev
status:
  loadBalancer: {}
